influxdb3_catalog/src/catalog/versions/snapshots/influxdb3_catalog__catalog__versions__v2__tests__catalog_file_ordering.snap
---
source: influxdb3_catalog/src/catalog/versions/v2.rs
expression: catalog.snapshot()
snapshot_kind: text
---
{
  "generation_config": {
    "generation_durations": []
  },
  "nodes": {
    "repo": [],
    "next_id": 0
  },
  "databases": {
    "repo": [
      [
        0,
        {
          "id": 0,
          "name": "_internal",
          "tables": {
            "repo": [],
            "next_id": 0
          },
          "retention_period": {
            "Duration": {
              "secs": 604800,
              "nanos": 0
            }
          },
          "processing_engine_triggers": {
            "repo": [],
            "next_id": 0
          },
          "deleted": false,
          "hard_delete_time": null
        }
      ],
      [
        1,
        {
          "id": 1,
          "name": "test_db",
          "tables": {
            "repo": [
              [
                0,
                {
                  "table_id": 0,
                  "table_name": "test_tbl",
                  "key": [
                    0
                  ],
                  "columns": {
                    "repo": [
                      {
                        "tag": {
                          "id": 0,
                          "column_id": 0,
                          "name": "t1"
                        }
                      },
                      {
                        "field": {
                          "id": [
                            0,
                            0
                          ],
                          "column_id": 1,
                          "name": "f1",
                          "data_type": "String"
                        }
                      },
                      {
                        "timestamp": {
                          "column_id": 2,
                          "name": "time"
                        }
                      },
                      {
                        "field": {
                          "id": [
                            1,
                            0
                          ],
                          "column_id": 3,
                          "name": "f2",
                          "data_type": "Integer"
                        }
                      }
                    ],
                    "next_id": 4
                  },
                  "field_families": {
                    "repo": [
                      [
                        0,
                        {
                          "name": {
                            "auto": 0
                          },
                          "id": 0
                        }
                      ],
                      [
                        1,
                        {
                          "name": {
                            "auto": 0
                          },
                          "id": 1
                        }
                      ]
                    ],
                    "next_id": 2
                  },
                  "last_caches": {
                    "repo": [],
                    "next_id": 0
                  },
                  "distinct_caches": {
                    "repo": [],
                    "next_id": 0
                  },
                  "deleted": false,
                  "hard_delete_time": null,
                  "field_family_mode": "aware"
                }
              ]
            ],
            "next_id": 1
          },
          "retention_period": "Indefinite",
          "processing_engine_triggers": {
            "repo": [],
            "next_id": 0
          },
          "deleted": false,
          "hard_delete_time": null
        }
      ]
    ],
    "next_id": 2
  },
  "sequence": 4,
  "tokens": {
    "repo": [],
    "next_id": 0
  },
  "catalog_id": "test",
  "catalog_uuid": "[uuid]"
}
