influxdb3_catalog/src/catalog/versions/snapshots/influxdb3_catalog__catalog__versions__v2__tests__serialization_format.snap
---
source: influxdb3_catalog/src/catalog/versions/v2.rs
description: Catalog snapshot with deleted objects
expression: snapshot
---
{
  "generation_config": {
    "generation_durations": []
  },
  "nodes": {
    "repo": [],
    "next_id": 0
  },
  "databases": {
    "repo": [],
    "next_id": 0
  },
  "sequence": 0,
  "tokens": {
    "repo": [],
    "next_id": 0
  },
  "catalog_id": "test-catalog",
  "catalog_uuid": "[uuid]"
}
